ok the logic of this from func prog and OOP come into sense, the func prog refering to the element, OOP is more use to chain the class so we usually uses e.target instead of this in OOP

--- a/manifest.json
+++ b/manifest.json
@@ -22,5 +22,15 @@
         "content.js"
       ]
     }
-  ]
+  ],
+  "web_accessible_resources": [
+  {
+    "resources": [
+      "katex/katex.min.js",
+      "katex/katex.min.css",
+      "katex/fonts/*"
+    ],
+    "matches": ["<all_urls>"]
+  }
+]
 }
